--- a/src/templates/error.hbs
+++ b/src/templates/error.hbs
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{{Something Went Wrong}}</title>
+    <title>Something Went Wrong</title>
 </head>
 <body>
-        <h1>Errr Code: {{statusCode}}</h1>
-        <h3>Please contact your administrator; sorry for the inconvenience</h1>
+        <h1>FIONA IS SO BEAUTIFUL.</h1>
+        <h2>Errr Code: {{ErrorObject.status_code}}</h1>
+        <h3>Please contact your administrator; sorry for the inconvenience</h3>
 </body>
 </html>
